objects/Permission_Set_History__c.object
<CustomObject>
    <description>This will hold changes to permission sets</description>
    <label>Permission Set History</label>
    <nameField>
        <displayFormat>PSH-{000000000}</displayFormat>
        <label>Permission Set History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Permission Set History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>New_Value__c</fullName>
        <description>The New Value the field was changed to</description>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Changed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Changed by this user</description>
        <label>Changed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Permission_Set_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <description>The Field name of the Permission Set</description>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Value__c</fullName>
        <description>The previous value of the permission set</description>
        <label>Previous Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Time_Changed__c</fullName>
        <description>The Date/Time The Field Value was  Changed</description>
        <label>Date/Time Changed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Permission_Set_Id__c</fullName>
        <description>The Permission Set ID (since Lookup can;t be used), We use a URL in another field to link to P.SET</description>
        <label>Permission Set Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permission_Set_Link__c</fullName>
        <defaultValue>&quot;/lightning/setup/PermSets/page?address=%2F&quot;</defaultValue>
        <description>This is the link to the permission set</description>
        <label>Permission Set Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Permission_Set_Label__c</fullName>
        <description>The Display Label for the Permission Set</description>
        <label>Permission Set Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>